@@ -1,8 +1,0 @@
-// PR c++/16301
-
-// { dg-do compile }
-
-namespace NS2 
-{ 
-  using namespace NS1 __attribute__ ((strong));  // { dg-error "" }
-}
