@@ -250,7 +250,6 @@ namespace std
       };
   } // namespace __cxx1998
 
-  // namespace __debug __attribute__ ((strong));
   inline namespace __debug { }
 }
 </pre></div><div class="section"><div class="titlepage"><div><div><h5 class="title"><a id="methods.coexistence.link"></a>Link- and run-time coexistence of release- and
